# tutorialsCPP

./: README.md
gdv/: .gitignore  CMakeLists.txt
gdv/src/: PixelManipulation02.h  VideoCam03.h  main.cpp  util.cpp  util.h
gdv/src/tutorials/: AffineTransformation12.h  Blur09.h  ConnectedComponents07.h  EdgeDetection14.h  FeatDetection15.h  FourierTransform10.h  ImgManipulation01.h  ProjTransformation13.h  RgbToHsv06.h  TemplateMatching08.h  Transformations11.h  VideoCam03.h  VideoFile04.h  WebcamDraw05.h
